<resources>
    <string name="app_name">Despachos MT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entregar">Entregar</string>
    <string name="direccion">Direccion</string>
    <string name="empresa">Empresa</string>
    <string name="nombre_del_solicitante">Nombre del solicitante</string>
    <string name="button_to_gmaps">button_to_gmaps</string>
    <string name="pDialogLoad">Cargando, por favor espere…</string>
    <string name="load_dialog">Cargando, por favor espere…</string>
    <string name="id">ID</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>

    <!-- GMAPS -->
    <string name="title_activity_maps">Map</string>
    <string name="permission_refused">Permission was not granted</string>
    <string name="permission_request_title">Special Permission Request</string>
    <string name="app_permission_notice">This permission request is very important to your app functionality. If it is not granted your app might not work the way it is intended</string>
    <string name="failed_draw">Empty line path return</string>
    <string name="server_error">Server error. Something when wrong with the server</string>
</resources>
