<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/item_layout"
    android:paddingStart="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="RtlSymmetry"
    android:orientation="vertical">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:ignore="RtlSymmetry,UselessParent">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view4"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/view5"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/empresa"
            android:background="@drawable/button_mt"
            android:onClick="entregar"
            android:text="@string/entregar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button3"
            android:layout_below="@+id/view6"
            android:layout_toEndOf="@+id/detalle_id"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showMap"
            android:text="@string/direccion"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignEnd="@+id/direccion"
            android:layout_below="@+id/direccion"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/solicitante"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/empresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/solicitante"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/direccion"
            android:text="@string/empresa" />

        <TextView
            android:id="@+id/solicitante"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/empresa"
            android:maxLines="4"
            android:text="@string/nombre_del_solicitante"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detalle_id"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/direccion"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/id" />

        <TextView android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:visibility="gone"/>

        <TextView android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>